# n-lang

./: .editorconfig  .gitignore  .gitlab-ci.yml  Cargo.toml  readme.md
docs/: _config.yml
presentations/: first-presentation.rs
presentations/first_presentation/: b.n  main.rs
presentations/second_presentation/: cool_stuff.rs  main.rs  prettify.rs
src/: lib.rs  main.rs
src/cli/: cli.rs  main.rs  resolve.rs  stdlib.rs
src/code_generation/: mod.rs
src/desc_lang/: mod.rs
src/helpers/: arr_macro.rs  array_macro.rs  as_unique.rs  assertion.rs  code_formatter.rs  convert_macro.rs  count_expression_macro.rs  display_list.rs  extract.rs  extractor.rs  find_index.rs  format.rs  group.rs  id_pull.rs  into_static.rs  is_f32_enough.rs  iter_buffer.rs  lazy.rs  loud_rw_lock.rs  map.rs  match_it_macro.rs  mod.rs  name_unique.rs  num_range.rs  parse_component.rs  parse_number_literal.rs  path.rs  re_entrant_rw_lock.rs  resolve.rs  result_collect.rs  storage.rs  sync_ref.rs  universal_assert_macro.rs  write_pad.rs
src/language/: mod.rs  others.rs
src/lexeme_scanner/: mod.rs  position.rs  scan_error.rs  scanner.rs  scanner_error.rs  scanner_tests.rs  token.rs
src/man_lang/: mod.rs  others.rs
src/new_project_analysis/: error.rs  item.rs  mod.rs  module.rs  project.rs  resolver.rs  source.rs
src/old_project_analysis/: error.rs  resolve.rs
src/parser_basics/: input.rs  (+7 more)
tests/: chomp_around_primitives.rs  desc_lang.rs  dir_resolve.rs  error_groups.rs  lexeme_scanner.rs  man_lang.rs  man_lang_expressions.rs  nom_around_primitives.rs  parser_basics.rs  supercow.rs
(+151 files in other folders)
