[package]
name = "n_transpiler"
version = "0.1.0"
authors = ["NotIntMan"]

[lib]
name = "n_transpiler"
path = "src/lib.rs"

[[bin]]
name = "first_presentation"
path = "presentations/first_presentation/main.rs"

[[bin]]
name = "second_presentation"
path = "presentations/second_presentation/main.rs"

[dependencies]
nom = "3.2.1"
log = "0.4.1"
env_logger = "0.5.3"

[dev-dependencies]
pretty_assertions = "0.5.0"
