[package]
name = "n_lang"
version = "0.0.0"
authors = ["Dmitry Demin"]

[lib]
name = "n_lang"
path = "src/lib.rs"

[features]
parser_trace = []

[[bin]]
name = "first_presentation"
path = "presentations/first_presentation/main.rs"

[[bin]]
name = "second_presentation"
path = "presentations/second_presentation/main.rs"

[dependencies]
nom = "3.2.1"
log = "0.4.1"
env_logger = "0.5.3"
indexmap = "0.4.1"

[dev-dependencies]
pretty_assertions = "0.5.0"
